crates/keron-lang/tests/corpus/errors/check/double_in_int_annotation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Int`, found `Double`
  --> 1:14
  |
1 | val a: Int = 1 + 2.5
  |              ^^^^^^^
